--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Ruslan Bairamovi",
   "license": "ISC",
   "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.2.0",
     "node-sass": "^4.5.3"
   }
 }
